[UPDATE] ClubBoardUpdate 수정